navbar. chart is not responsive. fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,25 +10,15 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
-@import "bootstrap-sprockets"
-@import "bootstrap"
 
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
 
-.body
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif
-  position: relative
-  width: 100%
-  height: 100%
-  color: red
-  background-color: black
+body {
+  background-color: pink;
+}
 
-.li
-  color: black
+button {
 
-
-.html
-  width: 100%
-  height: 100%
+}
